--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "brunocfalcao/blade-feather-icons": "^4.0",
         "laravel/framework": "^11.0",
         "laravel/pulse": "^1.0@beta",
         "laravel/tinker": "^2.9",
