--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.9",
         "league/csv": "^9.15",
         "livewire/livewire": "^3.4",
+        "spatie/laravel-sitemap": "^7.2",
         "spatie/laravel-sluggable": "^3.6"
     },
     "require-dev": {
