Add Countries API Option

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "brunocfalcao/blade-feather-icons": "^4.0",
         "laravel/framework": "^11.0",
         "laravel/pulse": "^1.0@beta",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "league/csv": "^9.15",
         "livewire/livewire": "^3.4",
